--- a/package.json
+++ b/package.json
@@ -9,30 +9,36 @@
     "analyze": "ANALYZE=true yarn build"
   },
   "dependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@ctrl/tinycolor": "^2.6.0",
-    "@emotion/babel-preset-css-prop": "^10.0.27",
-    "@emotion/core": "^10.0.27",
-    "@emotion/styled": "^10.0.27",
-    "emotion-theming": "^10.0.27",
-    "next": "9.2.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
+    "@ctrl/tinycolor": "^3.4.0",
+    "@emotion/babel-plugin": "^11.2.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@fontsource/raleway": "^4.2.2",
+    "@node-rs/helper": "^1.1.0",
+    "@theme-ui/color": "0.6.1",
+    "@theme-ui/match-media": "0.6.1",
+    "@theme-ui/presets": "0.6.1",
+    "next": "10.1.2",
     "normalize.css": "^8.0.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-icons": "^3.9.0",
-    "react-obfuscate": "^3.6.6"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-obfuscate": "^3.6.6",
+    "theme-ui": "0.6.1",
+    "victormono": "^1.4.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^9.2.1",
-    "@types/node": "^13.7.1",
-    "@types/react": "^16.9.19",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "@next/bundle-analyzer": "^10.1.2",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
-    "prettier": "^1.19.1",
-    "typescript": "^3.7.5"
+    "eslint-plugin-react": "^7.23.1",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   }
 }
