--- a/package.json
+++ b/package.json
@@ -11,34 +11,34 @@
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "@ctrl/tinycolor": "^3.4.0",
-    "@emotion/babel-plugin": "^11.2.0",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
     "@fontsource/raleway": "^4.2.2",
     "@node-rs/helper": "^1.1.0",
-    "@theme-ui/color": "0.6.1",
-    "@theme-ui/match-media": "0.6.1",
-    "@theme-ui/presets": "0.6.1",
-    "next": "10.1.2",
+    "@reach/portal": "^0.15.0",
+    "@theme-ui/color": "0.6.2",
+    "@theme-ui/match-media": "0.6.2",
+    "@theme-ui/presets": "0.6.2",
+    "next": "10.1.3",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-obfuscate": "^3.6.6",
-    "theme-ui": "0.6.1",
+    "react-tsparticles": "^1.26.3",
+    "theme-ui": "0.6.2",
+    "tsparticles": "^1.26.2",
     "victormono": "^1.4.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^10.1.2",
+    "@next/bundle-analyzer": "^10.1.3",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "eslint": "^7.23.0",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react": "^7.23.2",
     "prettier": "^2.2.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.4"
   }
 }
