--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@theme-ui/color": "0.6.2",
     "@theme-ui/match-media": "0.6.2",
     "@theme-ui/presets": "0.6.2",
+    "date-fns": "^2.20.1",
     "next": "10.1.3",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
@@ -30,14 +31,19 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^10.1.3",
+    "@testing-library/dom": "^7.30.3",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.23.2",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   }
