--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "types": ["node", "@emotion/react"]
+    "types": ["node", "@emotion/react"],
+    "baseUrl": ".",
+    "paths": {
+      "@test/*": ["test/*"],
+      "@components/*": ["components/*"],
+    }
   },
   "exclude": ["node_modules"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
