feat(wip): factory for creating api handlers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "paths": {
       "@test/*": ["test/*"],
       "@components/*": ["components/*"],
+      "@utils/*": ["utils/*"]
     }
   },
   "exclude": ["node_modules"],
