--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@theme-ui/color": "0.6.2",
     "@theme-ui/match-media": "0.6.2",
     "@theme-ui/presets": "0.6.2",
+    "boom": "^7.3.0",
     "date-fns": "^2.20.1",
     "next": "10.1.3",
     "normalize.css": "^8.0.1",
@@ -34,6 +35,7 @@
     "@testing-library/dom": "^7.30.3",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
+    "@types/boom": "^7.3.0",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
