--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@theme-ui/color": "0.6.2",
     "@theme-ui/match-media": "0.6.2",
     "@theme-ui/presets": "0.6.2",
+    "awilix": "^4.3.3",
     "boom": "^7.3.0",
     "date-fns": "^2.20.1",
     "next": "10.1.3",
