--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "@ctrl/tinycolor": "^3.4.0",
     "@fontsource/raleway": "^4.2.2",
+    "@hapi/boom": "^9.1.2",
     "@node-rs/helper": "^1.1.0",
     "@reach/portal": "^0.15.0",
     "@theme-ui/color": "0.6.2",
     "@theme-ui/match-media": "0.6.2",
     "@theme-ui/presets": "0.6.2",
+    "@types/convict": "^6.0.1",
+    "ajv": "^8.1.0",
+    "avvio": "^7.2.1",
     "awilix": "^4.3.3",
-    "boom": "^7.3.0",
+    "convict": "^6.0.1",
     "date-fns": "^2.20.1",
+    "middie": "^5.2.0",
     "next": "10.1.3",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
@@ -36,7 +41,6 @@
     "@testing-library/dom": "^7.30.3",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
-    "@types/boom": "^7.3.0",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
